Replace overwhelming Spring Boot  (#1)
* Replace overwhelming Spring Boot
* Remove Spring Boot
* Use ApplicationFactory pattern instead Spring's DI
* Use Hoplite config instead Spring's properties (Aliases for old behavior enabled)
* use installDist for docker instead Spring Boot gradle plugin
* Use java's virtual thread with loop instead Spring's scheduler

* Remove aliases, rewrite names of config for env variable compat
Remove executor for starting virtual threads and use startVirtualThread directly

* Fix looping intervals

* duration, yaml(ENV)...

* remove useless logback.xml