@@ -3,9 +3,10 @@ WORKDIR /project
 COPY src ./src
 COPY build.gradle.kts ./build.gradle.kts
 COPY settings.gradle.kts ./settings.gradle.kts
-RUN gradle clean build
+RUN gradle clean installDist
 
 FROM eclipse-temurin as backend
 WORKDIR /root
-COPY --from=builder /project/build/libs/*-boot.jar ./app
-ENTRYPOINT ["java", "-jar", "--enable-preview", "/root/app"]
+COPY --from=builder /project/build/install/glock/ ./app/
+WORKDIR /root/app/
+ENTRYPOINT ["bin/glock"]
